crates/kula-core/tests/corpus/invalid/rule-09-marriage-before-spouse-born.kula
person alice name:"Alice" born:1950-04-12 gender:female
person bob   name:"Bob"   born:1948-11-30 gender:male

marriage m_alice_bob alice bob start:1940-01-01
